tests/xml/invalidxml/obsBlock/noobscontext.xml.README
noobscontext.xml: BAD no obsContext block in obsData
